enum RoleType {
  doctor,
  nurse,
  admin,
  patient,
}
