@startuml
skinparam classAttributeIconSize 0

' --- User Management & RBAC (F-A-01, S-ALL-01) ---
abstract class User {
  -userId: text
  -Fname: String
  -Mname: String
  -Lname: String
  -passwordHash: text
  -role: RoleType
  -created_at: Timestamp
  -last_login: Timestamp
  --
  +login()
  +logout()
  ==
  ' Doctor-specific functions
  +manageDrugLibrary()
  +setSafetyLimits()
  +generateReports()
  +viewAuditTrail()
  +exportReports(format: String) 
  ==
  ' Nurse-specific functions
  +selectDrug()
  +programParameters()
  +manageInfusion()
  +acknowledgeAlarm()
  +viewSessionAuditLogs() 
  ==
  ' Admin-specific functions
  +manageUserAccounts()
  +configureSystem()
  +viewSystemHealth()
}

enum RoleType {
  DOCTOR
  NURSE
  ADMIN
  PATIENT
  }

' --- Drug Library & Safety (F-D-01, F-D-02, SF-D-01) ---
class Drug {
  -name: String
  -concentration: float
  -concentrationUnit: String
  -defaultRate: float
  -hardLimitCeiling: float
  -softLimitThreshold: float
  -isArchived: boolean
  +addDrug(Drug)
  +editDrug(Drug)
  +archiveDrug(Drug)
  +findDrugByName(String): Drug

}

' --- Infusion & Simulation (F-N-04, F-N-06, SF-N-05) ---
class InfusionSession {
  -sessionId: uuid
  -userId: uuid
  -PatientID: uuid
  -currentRate: float
  -volumeInfused: float
  -volumeRemaining: float
  -status: varchar
  -drugID: uuid
  -startTime: timestamp
  -endTime: timestamp
  -batteryLevel: float
  +initializeFromDrug(Drug) 
  +start()
  +resume()
  +pause()
  +emergencyStop()
  +drain(duration: int)
  +checkStatus(): BatteryState
}

class Alarm {
  -alarmId: uuid
  -sessionId: uuid
  -alarmtime: timestamp
  -eventid: uuid
  -ack/res_by: uuid
  -ack/res_at: timestamp
  -ack/res: boolean
  +trigger()
  +resolve()
}

' --- Alarms & Safety Logic (F-N-07, SF-N-03) ---
class Alarms {
  -alarmId: uuid
  -alarmname: text
  -severity: text
  -Description: text
}

class AuditLog {
  ' Immutable Audit Trail (S-D-02, F-D-05)
  -logId: uuid
  -userId: uuid
  -action: text
  -entityType: text
  -entityId: uuid
  -timestamp: timestamp
  -oldValue: String
  -newValue: String
  +addEntry()
  +previewActiveSession()
  +queryByDateRange() 
}



' Doctor governs Drug (F-D-01)
User --> Drug : manages

' Nurse operates InfusionSession (F-N-04)
User --> InfusionSession : operates

User --> AuditLog : views (Session only)

InfusionSession "1" o-- "*" Alarm : triggers

InfusionSession --> Drug : "takes data from"

' Logging Relations (S-D-02, S-N-03)
InfusionSession --> AuditLog : records to
User --> AuditLog : views (Full access except other users logins)
User --> AuditLog : views (Full access)

' Admin manages Users (F-A-01)
User --> User : manages

Alarm --> Alarms : references

@enduml